-*-outline-*-
$Id$

Jikes RVM NEWS -- History of significant changes

This file contains the release notes since Jikes RVM 2.0.0, released
on October 14, 2001,

*Jikes RVM 2.4.6 Release Notes (future)
** Highlights
*** A large scale restructuring of the source tree was performed 
    to prepare for making it easier to develop Jikes RVM using Eclipse.
    All files except for the Java source to Jikes RVM itself was moved
    out of the RVM_ROOT/rvm directory.  RVM_ROOT/rvm itself has not yet
    been reorganized so that package/directory structures match, but we 
    anticipate this happening in the near future.  

** Bug fixes

** Other Notes


*Jikes RVM 2.4.5 Release Notes (released August 14, 2006)
** Highlights
*** The recommended version of GNU classpath for Jikes RVM 2.4.5 is 0.92.
    GNU classpath version 0.91 will work, but Jikes RVM 2.4.5 will not 
    compile against versions of GNU classpath before 0.91.

*** Classpath AWT and Swing tests now run with the Jikes RVM. We have changed
    from using the portable native sync code, and addressed issues with M-to-N
    threading.

*** We can now load and run Java 1.5.0 Java class files. Support includes
    building the Jikes RVM using a 1.5.0 javac compiler and running the
    SPEC JBB 2005 benchmark. Includes reflection support for generic types.

*** MMTk changes & refactors.  A mark-compact collector has been added.  A
    number of key bugs have been fixed, both in the vm (eg baseline GC
    maps), and in MMTk proper.  Completed a major refactoring of
    "locals" to explicitly separate per-mutator and per-collector
    contexts.  This generalizes away from assumptions of the current
    Jikes RVM threading model.

*** We can now load runtime and non-runtime annotations. Runtime support
    is limited as Classpath is missing the base annotation definitions.
    A work around is to switch on non-runtime annotation loading in the RVM.
    NOTE: This requires classpath 0.91 or better.
