@@ -757,7 +757,7 @@ function rationalize_classpath_version () {
 
     ## Now check for setting more than one RVM_WITH_CLASSPATH variable.
     local -i sum
-    let "sum=(RVM_WITH_CLASSPATH_0_91 + RVM_WITH_CLASSPATH_0_92 \
+    let "sum=(RVM_WITH_CLASSPATH_0_92 \
               +  RVM_WITH_CLASSPATH_CVS_HEAD)"
     if (( sum > 1 )); then
 	croak_nonusage "More than one of the variables RVM_WITH_CLASSPATH_<version> is defined.  Your configuration files are inconsistent."
@@ -772,7 +772,6 @@ function rationalize_classpath_version () {
     local unk="$(set | sed \
 			-e '/^RVM_WITH_CLASSPATH_/!d'			\
 			-e '/=0$/d'					\
-			-e '/^RVM_WITH_CLASSPATH_0_91=/d'		\
 			-e '/^RVM_WITH_CLASSPATH_0_92=/d'		\
 			-e '/^RVM_WITH_CLASSPATH_CVS_HEAD=/d' \
 		)"
@@ -1278,7 +1277,6 @@ declare -i RVM_WITH_QUICK_COMPILER_INLINING=0    # No qc inlining
 
 ## Classpath versions that might work with Jikes RVM.
 ## See $RVM_ROOT/config/classpath-version for the gory details.
-declare -i RVM_WITH_CLASSPATH_0_91=0
 declare -i RVM_WITH_CLASSPATH_0_92=0
 declare -i RVM_WITH_CLASSPATH_CVS_HEAD=0
 
